# protobuf-d

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  dub.json  renovate.json
.github/workflows/: bazel.yml  dub.yml  main.yml  pre-commit.yml
conformance/: .gitignore  BUILD.bazel  conformance-d  conformance_d.d  conformance_test.sh  failure_list_d.txt  run-conformance-test.sh
examples/: .gitignore  BUILD.bazel  add_person.d  dub.json  list_people.d
protoc-gen-d/: protoc-gen-d.d
protoc-gen-d/google/protobuf/: descriptor.d
protoc-gen-d/google/protobuf/compiler/: plugin.d
protoc-gen-d/proto/google/protobuf/: descriptor.proto
protoc_gen_d/: BUILD  BUILD.bazel  dub.json  protoc-gen-d.d
protoc_gen_d/google/protobuf/: descriptor.d
protoc_gen_d/proto/google/protobuf/: descriptor.proto
protoc_gen_d/proto/google/protobuf/compiler/: plugin.proto
src/: BUILD
src/google/protobuf/: any.d  api.d  common.d  decoding.d  duration.d  empty.d  encoding.d  field_mask.d  internal.d  json_decoding.d  json_encoding.d  package.d  source_context.d  struct_.d  text_decoding.d  text_encoding.d  timestamp.d  type.d  wrappers.d
test/: .gitignore  BUILD.bazel  basic.d  dub.json  expected_generated_code.d  generated_code.d  generated_code.proto  run.sh
test/a/b/: c.proto
test/golden/: generated_code.d
test/golden/a/: c.d
tools/: BUILD.bazel  expose_conformance_proto.patch  expose_conformance_test_rule.patch  preset.bazelrc  python_compat.patch  ruby_compat.patch
