module(
    name = "protobuf_d",
    version = "0.7.0",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "30.2")
bazel_dep(name = "rules_d", version = "0.8.2")

bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)
bazel_dep(name = "rules_shell", version = "0.4.1", dev_dependency = True)

# Patch protobuf so its Bazel conformance_test rule is available to this module.
single_version_override(
    module_name = "protobuf",
    patch_strip = 1,
    patches = [
        "tools/ruby_compat.patch",
        "tools/python_compat.patch",
        "tools/expose_conformance_test_rule.patch",
        "tools/expose_conformance_proto.patch",
    ],
    version = "30.2",
)

d = use_extension("@rules_d//d:extensions.bzl", "d")
d.toolchain(d_version = "dmd-2.112.0")
d.toolchain(d_version = "ldc-1.41.0")
use_repo(d, "d_toolchains")

register_toolchains("@d_toolchains//:all")
