load("@rules_d//d:defs.bzl", "d_binary", "d_library")

package(default_visibility = ["//visibility:public"])

d_library(
    name = "descriptor_support",
    srcs = [
        "google/protobuf/compiler/plugin.d",
        "google/protobuf/descriptor.d",
    ],
    imports = ["."],
    deps = ["//:protobuf"],
)

d_binary(
    name = "protoc-gen-d",
    srcs = ["protoc-gen-d.d"],
    imports = ["."],
    deps = [
        ":descriptor_support",
        "//:protobuf",
    ],
)

filegroup(
    name = "plugin_proto_sources",
    srcs = glob(["proto/**/*.proto"]),
)
